<?xml version="1.0"?>
<package format="2">

  <name>timer_tester</name>
  <version>1.0.0</version>
  <description>Timer tester</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
